# cmake-cpp-sdl-example

./: CMakeLists.txt  README.md  init.sh  vcpkg.json
src/: main.cpp
